--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@ ul li{
     display: inline;
 }
 .circle1 {
-    margin-top: -10vh;
+    margin-top: -11vh;
     margin-left: -25vw;
     background: #FF5900;
+    opacity: 90%;
     height: 100vh;
     width: 50vw;
     border-radius: 50%;
+}
+.logo {
+    font-family: sedgwick;
 }
