--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
+    font-family: niramit;
 }
 .container {
     /* height: 4rem; 
@@ -26,7 +27,7 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.249);
 }
 ul li{
     display: inline;
@@ -34,12 +35,24 @@ ul li{
 .circle1 {
     margin-top: -11vh;
     margin-left: -25vw;
-    background: #FF5900;
+    background: #ff5500;
     opacity: 90%;
     height: 100vh;
     width: 50vw;
     border-radius: 50%;
+    border: 0.1px solid black;
+    box-shadow: 12px 8px 4px rgb(191, 191, 191);
 }
+
 .logo {
-    font-family: sedgwick;
-}
+    color: black;
+    font-family: "Sedgwick Ave";
+    font-size: 150px;
+    font-weight: lighter;
+    line-height: 100%;
+    margin-left: 30vw;
+    margin-top: 30vh;
+    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
+  }
+  
+  
