--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: niramit;
 }
 .container {
-    /* height: 4rem; 
-    width: 100vw; */
+    height: 4rem; 
+    width: 100%;
     margin: 0;
     display: flex;
     align-items: center; 
@@ -26,23 +26,46 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5rem;
+    border-radius: 0rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.249);
+    position: fixed;
 }
 ul li{
+    font-size: 18px;
     display: inline;
+    color: black;
+    justify-content: space-evenly;
+    padding: 25px;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.137);
+}
+ul li a {
+    text-decoration: none;
+    color: black;
+}
+a:link {
+    color: black;  
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: #ff5500;  
 }
 .circle1 {
-    margin-top: -11vh;
+    margin-top: -9vh;
     margin-left: -25vw;
     background: #ff5500;
     opacity: 90%;
     height: 100vh;
     width: 50vw;
     border-radius: 50%;
-    border: 0.1px solid black;
-    box-shadow: 12px 8px 4px rgb(191, 191, 191);
+    border: 0.1px solid rgba(0, 0, 0, 0.298);
+    box-shadow: 10px 6px 2px rgb(191, 191, 191);
 }
+
+
 
 .logo {
     color: black;
@@ -53,6 +76,25 @@ ul li{
     margin-left: 30vw;
     margin-top: 30vh;
     text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
-  }
-  
-  
+}
+
+p {
+    font-size: 15px;
+    margin-top: -12vh;
+    margin-left: 34vw;
+}
+.vertical-line {
+    border-left: 1.5px solid black;
+    border-top: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
+    height: 3.4vh;
+    margin-left: 33.6vw;
+    margin-top: -5.7vh;
+}
+.logo-image {
+    margin-top: -23vh;
+    margin-left: 57vw;
+    height: 100px;
+    width: 100px;
+}
