--- a/style.css
+++ b/style.css
@@ -68,6 +68,12 @@ a:hover {
     border-radius: 50%;
     border: 0.1px solid rgba(0, 0, 0, 0.298);
     box-shadow: 10px 6px 2px rgb(191, 191, 191);
+        transition: all 0.3s ease-in-out;
+}
+
+.circle1:hover {
+    box-shadow: 0 0 25px rgba(255, 89, 0, 0.8); 
+    
 }
 
 
