--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a:hover {
 
 p {
     font-size: 15px;
-    margin-top: -12vh;
+    margin-top: -11vh;
     margin-left: 34vw;
 }
 .vertical-line {
@@ -280,3 +280,136 @@ p {
     transform: scale(1.08) rotate(2deg); /* Slight zoom and rotation */
 }
 
+.rule4 {
+    height: 2px;
+    width: 25%;
+    border: none;
+    background-color: #ff7023;
+    display: inline-block;
+    margin-left: 6%;
+    margin-bottom: 3.5vh;
+    margin-right: 59px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+}
+
+.rule5 {
+    height: 2px;
+    width: 25%;
+    border: none;
+    background-color: #ff7023;
+    display: inline-block;
+    margin-bottom: 3.5vh;
+    margin-left: 59px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+}
+
+.tp-heading {
+    margin-top: 12vh;
+    display: inline-block;
+    color: black;
+    font-family: "Sedgwick Ave";
+    font-size: 80px;
+    font-weight: normal;
+    text-align: center;
+    line-height: 30vh;
+    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
+}
+.pa1 {
+    margin-top: 4vh;
+}
+.pa1-img {
+    border: 2px solid black;
+    border-radius: 20px;
+    border-top: none;
+    border-left: none;
+    margin-top: -15vh;
+    margin-left: 10vh;
+    transition: all 0.3s ease-in-out;
+}
+.pa1-img:hover {
+    transform: translateY(-10px) scale(1.03);
+    transition: 0.5s;
+    cursor: pointer;
+}
+.title1 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 24px;
+    display: inline-block;
+    margin-left: 9vw;
+    margin-top: 2px;
+    text-shadow: 1px 5px 3px rgba(0, 0, 0, 0.194);
+    
+}
+.pa-para1 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 22px;
+    font-weight: 200;
+    text-align: left;
+    line-height: 3.7vh;
+    margin-left: 29vw;
+    margin-top: -27.5vh;
+    text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.21);
+}
+.rule6 {
+    border-left: 2px solid #ff7023;
+    border-top: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
+    height: 26vh;
+    margin-left: 28vw;
+    margin-top: -28vh;
+}
+
+.pa2 {
+    margin-top: -6vh;
+}
+.pa2-img {
+    display: inline;
+    border: 2px solid black;
+    border-radius: 20px;
+    border-top: none;
+    border-left: none;
+    margin-top: -45vh;
+    margin-left: 75vw;
+    transition: all 0.3s ease-in-out;
+    
+}
+.pa2-img:hover {
+    transform: translateY(-10px) scale(1.03);
+    transition: 0.5s;
+    cursor: pointer;
+}
+.title2 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 24px;
+    display: inline-block;
+    margin-left: 79vw;
+    margin-top: 2px;
+    text-shadow: 1px 5px 3px rgba(0, 0, 0, 0.194);
+    
+}
+.pa-para2 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 22px;
+    font-weight: 200;
+    text-align: right;
+    line-height: 3.7vh;
+    margin-top: 13vh;
+    margin-left: 18vw;
+    display: inline-block;
+    text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.21);
+}
+.rule7 {
+    border-left: 2px solid #ff7023;
+    border-top: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
+    height: 23vh;
+    margin-left: 72vw;
+    margin-top: -25vh;
+    display: block;
+}
