--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ body {
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.249);
     position: fixed;
 }
+
 ul {
-    padding-top: 8px;
+    padding-top: 0px;
 }
 ul li{
     font-size: 18px;
@@ -43,10 +44,37 @@ ul li{
     padding: 25px;
     text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.137);
 }
-ul li a {
+/* ul li a {
     text-decoration: none;
     color: black;
+} */
+nav ul li a {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    padding: 3px 0;
+    transition: color 0.3s;
 }
+
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #ff7023;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease;
+}
+
+nav ul li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+
 a:link {
     color: black;  
 }
@@ -54,10 +82,10 @@ a:link {
 a:visited {
     color: black;
 }
-
-a:hover {
+/* a:hover {
     color: #ff5500;  
-}
+} */
+ 
 .circle1 {
     margin-top: -9vh;
     margin-left: -25vw;
@@ -126,16 +154,23 @@ p {
     transition: 0.5s;
 }
 
-.signup {
+/* .login {
     height: 35px;
-    width: 150px;
-    border-top: 7px solid #ff7023;
+    width: 100px;
+    border: 1px solid #000000;
     background-color: #ff7023;
     border-radius: 50px;
     padding-top: 1px;
-    margin-top: -4vh;
-    margin-left: 30vw;
+    margin-top: -3vh;
+    margin-left: 32vw;
+    transition: all 0.3s ease-in-out
 }
+.login:hover {
+    
+    background: #ffffff00;
+    color: black;
+    transform: translateY(-5px) scale(1.1);
+} */
 
 
 .circle2 {
@@ -409,6 +444,113 @@ p {
     border-bottom: transparent;
     height: 23vh;
     margin-left: 72vw;
+    margin-top: -25vh;
+    display: block;
+}
+
+.pa3 {
+    margin-top: -2vh;
+}
+.pa3-img {
+    height: 280px;
+    width: 280px;
+    border: 2px solid black;
+    border-radius: 30px;
+    border-top: none;
+    border-left: none;
+    margin-top: -33vh;
+    margin-left: 10vh;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 3px 4px 9px rgba(0, 0, 0, 0.194);
+}
+.pa3-img:hover {
+    transform: translateY(-10px) scale(1.03);
+    transition: 0.5s;
+    cursor: pointer;
+}
+.title3 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 24px;
+    display: inline-block;
+    margin-left: 11vw;
+    margin-top: 2px;
+    text-shadow: 1px 5px 3px rgba(0, 0, 0, 0.194);
+    
+}
+.pa-para3 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 22px;
+    font-weight: 200;
+    text-align: left;
+    line-height: 3.7vh;
+    margin-left: 29vw;
+    margin-top: 10vh;
+    text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.21);
+}
+.rule8 {
+    border-left: 2px solid #ff7023;
+    border-top: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
+    height: 27vh;
+    margin-left: 28vw;
+    margin-top: -29vh;
+}
+
+
+.pa4 {
+    margin-top: -6vh;
+}
+.pa4-img {
+    height: 275px;
+    width: 275px;
+    display: inline;
+    border: 2px solid black;
+    border-radius: 20px;
+    border-top: none;
+    border-left: none;
+    margin-top: -45vh;
+    margin-left: 75vw;
+    box-shadow: 3px 4px 9px rgba(0, 0, 0, 0.194);
+    transition: all 0.3s ease-in-out;
+    
+}
+.pa4-img:hover {
+    transform: translateY(-10px) scale(1.03);
+    transition: 0.5s;
+    cursor: pointer;
+}
+.title4 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 24px;
+    display: inline-block;
+    margin-left: 79vw;
+    margin-top: 2px;
+    text-shadow: 1px 5px 3px rgba(0, 0, 0, 0.194);
+    
+}
+.pa-para4 {
+    color: black;
+    font-family: "Niramit";
+    font-size: 22px;
+    font-weight: 200;
+    text-align: right;
+    line-height: 3.7vh;
+    margin-top: 13vh;
+    margin-left: 20vw;
+    display: inline-block;
+    text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.21);
+}
+.rule9 {
+    border-left: 2px solid #ff7023;
+    border-top: transparent;
+    border-right: transparent;
+    border-bottom: transparent;
+    height: 23vh;
+    margin-left: 71.5vw;
     margin-top: -25vh;
     display: block;
 }
