--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+
 body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
     font-family: niramit;
@@ -162,7 +164,7 @@ p {
     margin-top: -5.7vh;
 }
 .logo-image {
-    margin-top: -23vh;
+    margin-top: -27vh;
     margin-left: 57vw;
     height: 100px;
     width: 100px;
@@ -440,7 +442,7 @@ p {
     text-align: left;
     line-height: 3.7vh;
     margin-left: 29vw;
-    margin-top: -27.5vh;
+    margin-top: -31.5vh;
     text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.21);
 }
 .rule6 {
@@ -620,7 +622,7 @@ p {
 
 
 .feedback-container {
-    margin-top: -30vh;
+    margin-top: -32vh;
     margin-left: 5vw;
     display: flex;
     justify-content: center;
@@ -646,9 +648,11 @@ p {
     border: none;
     background-color: #ff7023;
     display: inline-block;
-    margin-left: 0%;
-    margin-bottom: 3.5vh;
-    margin-right: 59px;
+    /* margin-left: 0%; */
+    margin-bottom: 3vh;
+    margin-left: -5vw;
+    margin-right: 3vw;
+    margin-top: 0vh;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 
@@ -658,8 +662,10 @@ p {
     border: none;
     background-color: #ff7023;
     display: inline-block;
-    margin-bottom: 3.5vh;
-    margin-left: 59px;
+    margin-bottom: 3vh;
+    margin-right: -1vw;
+    margin-left: 3vw;
+    margin-top: 0vh;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 .testimonial-section {
@@ -754,6 +760,7 @@ p {
     background-color: #ff7023;
     display: inline-block;
     margin-left: -5vw;
+    margin-right: 3vw;
     /* margin-left: 0%;
     margin-bottom: 3.5vh;
     margin-right: 59px; */
@@ -767,6 +774,7 @@ p {
     background-color: #ff7023;
     display: inline-block;
     margin-right: -5vw;
+    margin-left: 3vw;
     /* margin-bottom: 3.5vh; 
     margin-left: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
@@ -842,7 +850,7 @@ p {
 
 
 .feedback-container-new {
-    margin-top: -26vh;
+    margin-top: -36vh;
     margin-left: 0vw;
     margin-bottom: -35vh;
     display: flex;
@@ -868,6 +876,7 @@ p {
     background-color: #ff7023;
     display: inline-block;
     margin-left: 3vw;
+    margin-right: 1vw;
     /* margin-left: 0%;
     margin-bottom: 3.5vh;
     margin-right: 59px; */
@@ -881,6 +890,7 @@ p {
     background-color: #ff7023;
     display: inline-block;
     margin-right: 3vw;
+    margin-left: 1vw;
     /* margin-bottom: 3.5vh; 
     margin-left: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
@@ -952,11 +962,178 @@ p {
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 1vh;
   }
   
   .feedback-form-new button:hover {
     background-color: #000000;
+    border: 1px solid #ff7023;
     
   }
   
 
+
+
+
+.newsletter-footer {
+  background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
+  /* background: #ff6d1e; */
+  color: rgb(0, 0, 0);
+  padding: 60px 40px;
+  border-radius: 20px;
+  font-family: 'Segoe UI', sans-serif;
+  margin-top: 15vh;
+}
+
+.newsletter-content {
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: -2vh;
+}
+
+.newsletter-content h2 {
+  font-family: 'Sedgwick Ave';
+  letter-spacing: 1px;
+  font-size: 60px;
+  font-weight: normal;
+  margin-bottom: 14.5vh;
+  color: rgb(0, 0, 0);
+  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.323);
+
+}
+
+.newsletter-content p {
+  font-size: 16px;
+  opacity: 0.7;
+  color: rgb(0, 0, 0);
+  margin-bottom: 5vh;
+  margin-left: 0vw;
+  line-height: 2.5vh;
+  /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
+}
+
+.subscribe-form {
+  margin-top: 6vh;
+  color: rgb(0, 0, 0);
+}
+
+.subscribe-form input {
+    padding: 12px 20px;
+    border-radius: 30px;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    height: 36px;
+    width: 350px;
+    margin-right: 10px;
+    outline: none;
+    font-size: 16px;
+    font-family: 'Niramit';
+    background: rgba(255, 255, 255, 0.141);
+    /* background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px); */
+    color: rgb(0, 0, 0);
+    transition: all 0.3s ease-in-out;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.16);
+  }
+  
+  .subscribe-form input::placeholder {
+    color: rgba(0, 0, 0, 0.39);
+    opacity: 1;
+  }
+  
+  .subscribe-form input:focus {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  
+
+.subscribe-form button {
+  border-radius: 30px;
+  margin-bottom: 5vh;
+  height: 62px;
+  letter-spacing: 1.1px;
+  margin-left: -5vw;
+  margin-top: -3vh;
+  width: 150px;
+  border: 1px solid black;
+  background: #000000;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 22px;
+  cursor: pointer;
+  font-family: 'Sedgwick Ave';
+  transition: all 0.2s ease-in-out;
+}
+
+.subscribe-form button:hover {
+  background: #000000;
+  color: #ff7023;
+  box-shadow: 0 0 24px rgba(255, 102, 1, 0.3);
+}
+
+hr {
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
+  margin: 40px 0;
+}
+
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.brand {
+  flex: 1 1 250px;
+}
+
+.brand h3 {
+  font-size: 24px;
+  color: #00ffb3;
+}
+
+.brand p {
+  font-size: 13px;
+  margin-top: 10px;
+  opacity: 0.9;
+  color: white;
+}
+
+.social-icons i {
+  font-size: 18px;
+  margin-right: 10px;
+  margin-top: 15px;
+  cursor: pointer;
+  color: white;
+  transition: 0.3s;
+  color: white;
+}
+
+.social-icons i:hover {
+  color: #00ffb3;
+}
+
+.link-group {
+  flex: 1 1 150px;
+}
+
+.link-group h4 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: white;
+}
+
+.link-group ul {
+  list-style: none;
+  padding: 0;
+}
+
+.link-group li {
+  margin-bottom: 8px;
+  font-size: 13px;
+  cursor: pointer;
+  opacity: 0.85;
+  color: white;
+}
+
+.link-group li:hover {
+  color: #00ffb3;
+}
