--- a/style.css
+++ b/style.css
@@ -1143,9 +1143,44 @@ hr {
   }
   .link-group1 li a,
   .link-group2 li a {
+    position: relative;
+    color: rgb(0, 0, 0);
     text-decoration: none;
+    font-family: 'Niramit';
+    font-size: 16px;
+    padding-bottom: 2px;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304);
+    transition: color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
   }
+  
+  .link-group1 li a::after,
+  .link-group2 li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .link-group1 li a:hover,
+  .link-group2 li a:hover {
+    transform: scale(1.05);
+    transform-origin: left center;
+  }
+  
+  .link-group1 li a:hover::after,
+  .link-group2 li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  
+  
 
   .social-icons-grid {
     display: grid;
