--- a/signup.css
+++ b/signup.css
@@ -133,12 +133,15 @@ a:visited {
     margin: 0 auto;
     margin-top: -10vh;
     padding: 30px;
-    background: linear-gradient(280deg, #ff762d, #ff8127, #ff762d);
+    background: linear-gradient(280deg, #ff6817, #ff7c1e, #fe6b1b);
     border-radius: 20px;
     backdrop-filter: blur(15px);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
     color: #000;
     z-index: 10;
+  }
+  .signup-card:hover {
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.371);
   }
   
   .signup-form {
