--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a:visited {
 .circle1 {
     margin-top: -9vh;
     margin-left: -25vw;
-    background: #ff5500;
+    background: linear-gradient(280deg, #ea5600, #ff7104, #ff7700);
     opacity: 90%;
     height: 100vh;
     width: 50vw;
@@ -669,7 +669,7 @@ p {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 .testimonial-section {
-    background-color: #ff742e; /* soft cream background */
+    background: linear-gradient(280deg, #ff6105, #ff720c, #ff6206);
     max-width: 1000px;
     margin: 50px auto;
     margin-top: -35vh;
