--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a:visited {
 .circle1 {
     margin-top: -9vh;
     margin-left: -25vw;
-    background: linear-gradient(280deg, #ea5600, #ff6e14, #ff6a00);
+    background: linear-gradient(280deg, #ff4800, #ff6d12, #ff6a00);
     opacity: 90%;
     height: 100vh;
     width: 50vw;
