--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
     font-family: niramit;
