--- a/ambience.css
+++ b/ambience.css
@@ -436,6 +436,7 @@ a:visited {
         border-radius: 30px;
         overflow: hidden;
         transition: all 0.4s ease;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.942);
     }
     
     .ambienceimg1 {
@@ -485,7 +486,7 @@ a:visited {
     
     /* Hover Effects */
     .ambience-overlay-container:hover {
-        box-shadow: 0px 2px 18px rgb(255, 102, 0);
+        box-shadow: 0px 3px 28px rgb(255, 102, 0);
     }
     .ambience-overlay-container:hover .ambienceimg1 {
         filter: blur(8px) brightness(0.7);
