--- a/menu.css
+++ b/menu.css
@@ -397,7 +397,7 @@ a:visited {
         border: none;
         background-color: #ff7023;
         display: inline-block;
-        margin-left: 23vh;
+        margin-left: 14vw;
         margin-bottom: 3.5vh;
         margin-right: 5vh;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
@@ -418,30 +418,34 @@ a:visited {
 
     .menu-section2 {
         padding: 50px 20px;
+        margin-top: -20vh;
         text-align: center;
         font-family: 'Niramit', sans-serif;
       }
       
       .section-title {
-        font-size: 30px;
-        font-weight: bold;
+        font-size: 38px;
+        font-weight: normal;
         text-transform: uppercase;
         position: relative;
         margin: 50px 0 20px;
         color: #000;
-        font-family: 'Bebas Neue', cursive;
-        letter-spacing: 1.5px;
+        font-family: 'Sedgwick Ave';
+        word-spacing: 9px;
+        text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.205);
+        /* letter-spacing: 1px; */
       }
       
       .section-title::before,
       .section-title::after {
         content: "";
         display: inline-block;
-        width: 60px;
-        height: 3px;
+        width: 180px;
+        height: 2px;
         background-color: #ff7e25;
         margin: 0 15px;
         vertical-align: middle;
+        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.224);
       }
       
       .menu-row {
@@ -469,7 +473,7 @@ a:visited {
       .menu-card img {
         width: 100%;
         border-radius: 15px;
-        border: 2px solid #ff7e25;
+        /* border: 2px solid #ff7e25; */
       }
       
       .item-name {
