--- a/menu.css
+++ b/menu.css
@@ -452,18 +452,18 @@ a:visited {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 40px;
-        margin-bottom: 50px;
+        gap: 60px;
+        margin-bottom: 110px;
       }
       
       .menu-card {
         width: 200px;
         background: #fff;
         border-radius: 20px;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 5px 16px rgba(0, 0, 0, 0.139);
         padding: 15px 10px;
         text-align: center;
-        transition: transform 0.3s;
+        transition: all 0.3s ease-in-out;
       }
       
       .menu-card:hover {
