--- a/sandwich-geeks-react/src/styles/ambience.css
+++ b/sandwich-geeks-react/src/styles/ambience.css
@@ -28,7 +28,7 @@ body {
     backdrop-filter: blur(1rem);
     width: 100%;
     height: 10vh;
-    z-index: 1;
+    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,145 +87,7 @@ a:visited {
     color: black;
 }
 
-
-
-.signup-div {
-    margin-top: -10vh;
-}
-
-.signup-heading {
-    display: inline-block;
-    color: black;
-    font-family: "Sedgwick Ave";
-    font-size: 80px;
-    font-weight: normal;
-    text-align: center;
-    line-height: 30vh;
-    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
-}
-
-.rule1 {
-    height: 2px;
-    width: 27%;
-    border: none;
-    background-color: #ff7023;
-    display: inline-block;
-    margin-left: 23vh;
-    margin-bottom: 3.5vh;
-    margin-right: 5vh;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-}
-
-.rule2 {
-    height: 2px;
-    width: 27%;
-    border: none;
-    background-color: #ff7023;
-    display: inline-block;
-    margin-bottom: 3.5vh;
-    margin-left: 5vh;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-}
-
-
-.signup-card {
-    width: 90%;
-    max-width: 500px;
-    margin: 0 auto;
-    margin-top: -10vh;
-    padding: 30px;
-    background: linear-gradient(280deg, #ff6817, #ff7c1e, #fe6b1b);
-    border-radius: 20px;
-    backdrop-filter: blur(15px);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-    color: #000;
-    z-index: 10;
-  }
-  .signup-card:hover {
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.371);
-  }
-  
-  .signup-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .signup-form label {
-    font-weight: 500;
-    text-align: left;
-    margin-left: 1vw;
-    color: #000;
-  }
-  
-  .signup-form input {
-    padding: 12px 20px;
-    border-radius: 30px;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    height: 36px;
-    width: 450px;
-    margin-right: 10px;
-    outline: none;
-    font-size: 16px;
-    font-family: 'Niramit';
-    background: rgba(255, 255, 255, 0.141);
-    /* background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px); */
-    color: rgb(0, 0, 0);
-    transition: all 0.3s ease-in-out;
-    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.16);
-  }
-
-  .signup-form input::placeholder {
-    color: rgba(0, 0, 0, 0.39);
-    opacity: 1;
-  }
-  .signup-form input:focus {
-    background: rgba(255, 255, 255, 0.271);
-  }
-  .signup-form input:hover {
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.169);
-    color: #000;
-    transform: scale(1.02);
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .signup-form button {
-    border-radius: 30px;
-    /* margin-bottom: 5vh; */
-    padding: 12px 20px;
-    height: 64px;
-    letter-spacing: 1.1px;
-    margin-left: 0vw;
-    margin-top: 2vh;
-    width: 500px;
-    border: 1px solid black;
-    background: #000000;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    font-size: 24px;
-    cursor: pointer;
-    font-family: 'Sedgwick Ave';
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.264);
-  }
-  
-  .signup-form button:hover {
-    scale: 1.03;
-    background: #000000;
-    color: #ff7023;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-  }
-  .signin-prompt {
-    margin-top: 2vh;
-    font-size: large;
-    text-align: center;
-    margin-bottom: -2vh;
-  }
-
-
-
-  .newsletter-footer {
+.newsletter-footer {
     background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
     /* background: #ff6d1e; */
     max-width: 100%;
@@ -234,6 +96,7 @@ a:visited {
     padding-bottom: 100px;
     border-radius: 20px;
     font-family: 'Segoe UI', sans-serif;
+    margin: 0 8px 0 8px;
     margin-top: 15vh;
     box-shadow: 0 -8px 16px rgba(0, 0, 0, 0.301);
   }
@@ -249,7 +112,7 @@ a:visited {
     letter-spacing: 1px;
     font-size: 60px;
     font-weight: normal;
-    margin-bottom: 3vh;
+    margin-bottom: 14.5vh;
     color: rgb(0, 0, 0);
     text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.323);
   
@@ -259,7 +122,7 @@ a:visited {
     font-size: 16px;
     opacity: 0.7;
     color: rgb(0, 0, 0);
-    margin-bottom: 5vh;
+    margin-top: -2vh;
     margin-left: 0vw;
     line-height: 2.5vh;
     /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
@@ -513,7 +376,132 @@ a:visited {
       font-size: 16px;
     }
     
-  
-  
-  
-  
+
+
+    .ambience-div {
+        margin-top: -7vh;
+        margin-right: 50px;
+    }
+    
+    .ambience-heading {
+        display: inline-block;
+        color: black;
+        font-family: "Sedgwick Ave";
+        font-size: 80px;
+        font-weight: normal;
+        text-align: center;
+        line-height: 30vh;
+        text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
+    }
+    
+    .rule1 {
+        height: 2px;
+        width: 27%;
+        border: none;
+        background-color: #ff7023;
+        display: inline-block;
+        margin-left: 9.5vw;
+        margin-bottom: 3.5vh;
+        margin-right: 5vh;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+    }
+    
+    .rule2 {
+        height: 2px;
+        width: 27%;
+        border: none;
+        background-color: #ff7023;
+        display: inline-block;
+        margin-bottom: 3.5vh;
+        margin-left: 5vh;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+    }
+
+
+    .ambiencediv1 {
+        margin-top: -5vh;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+    }
+    
+    
+    
+    .ambience-overlay-container {
+        position: relative;
+        width: 95%;                 /* was 90% */
+        max-width: 900px;           /* was 700px */
+        margin: 0 auto;
+        border-radius: 30px;
+        overflow: hidden;
+        transition: all 0.4s ease;
+        z-index: 0;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.942);
+    }
+    
+    .ambienceimg1 {
+        width: 100%;
+        height: auto;
+        max-height: 550px;          /* was 420px */
+        border-radius: 30px;
+        object-fit: cover;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+        transition: all 0.4s ease;
+        display: block;
+    }
+
+    
+    
+    /* Orange Tint Layer */
+    .ambience-color-tint {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.586); /* orange with transparency */
+        opacity: 0;
+        transition: opacity 0.4s ease;
+        z-index: 1;
+    }
+    
+    /* Text Overlay */
+    .ambience-overlay-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #fff;
+        text-align: center;
+        font-size: 1.8rem;
+        font-family: 'Niramit';
+        font-weight: normal;
+        opacity: 0;
+        z-index: 2;
+        transition: opacity 0.4s ease;
+        padding: 20px;
+        text-shadow: 0px 1px 4px rgb(0, 0, 0);
+        pointer-events: none;
+    }
+    
+    /* Hover Effects */
+    .ambience-overlay-container:hover {
+        box-shadow: 0px 3px 28px rgb(255, 102, 0);
+    }
+    .ambience-overlay-container:hover .ambienceimg1 {
+        filter: blur(8px) brightness(0.7);
+        transform: scale(1.06);
+    }
+    
+    .ambience-overlay-container:hover .ambience-color-tint {
+        opacity: 1;
+    }
+    
+    .ambience-overlay-container:hover .ambience-overlay-text {
+        opacity: 1;
+    }
+    
