--- a/sandwich-geeks-react/src/styles/locationcontact.css
+++ b/sandwich-geeks-react/src/styles/locationcontact.css
@@ -28,7 +28,7 @@ body {
     backdrop-filter: blur(1rem);
     width: 100%;
     height: 10vh;
-    z-index: 9999;
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,7 +96,7 @@ a:visited {
     padding-bottom: 100px;
     border-radius: 20px;
     font-family: 'Segoe UI', sans-serif;
-    margin-top: 1vh;
+    margin-top: 15vh;
     box-shadow: 0 -8px 16px rgba(0, 0, 0, 0.301);
   }
   
@@ -121,7 +121,7 @@ a:visited {
     font-size: 16px;
     opacity: 0.7;
     color: rgb(0, 0, 0);
-    margin-bottom: 5vh;
+    margin-top: -2vh;
     margin-left: 0vw;
     line-height: 2.5vh;
     /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
@@ -377,130 +377,79 @@ a:visited {
     
 
 
-    .menu-div {
-        margin-top: -10vh;
-    }
-    
-    .menu-heading {
-        display: inline-block;
-        color: black;
-        font-family: "Sedgwick Ave";
-        font-size: 80px;
-        font-weight: normal;
-        text-align: center;
-        line-height: 30vh;
-        text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
-    }
-    
-    .rule1 {
-        height: 2px;
-        width: 27%;
-        border: none;
-        background-color: #ff7023;
-        display: inline-block;
-        margin-left: 14vw;
-        margin-bottom: 3.5vh;
-        margin-right: 5vh;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-    }
-    
-    .rule2 {
-        height: 2px;
-        width: 27%;
-        border: none;
-        background-color: #ff7023;
-        display: inline-block;
-        margin-bottom: 3.5vh;
-        margin-left: 5vh;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-    }
 
-
-
-    .menu-section2 {
-        padding: 50px 20px;
-        margin-top: -20vh;
-        text-align: center;
+    .location-contact-divider {
+        /* color: black;
+        border-color: black; */
+        margin-top: 4vh;
+        height: 65vh;
+        background-color: black;
+    }
+    .location-contact-section {
+        margin-top: 9vh;
         font-family: 'Niramit', sans-serif;
+        margin-bottom: -2vh;
+        display: flex;
+        margin-left: 5vw;
+        justify-content: center;
       }
       
-      .section-title {
-        font-size: 38px;
-        font-weight: normal;
-        text-transform: uppercase;
-        position: relative;
-        margin: 50px 0 20px;
-        color: #000;
-        font-family: 'Sedgwick Ave';
-        word-spacing: 9px;
-        text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.205);
-        /* letter-spacing: 1px; */
-      }
-      
-      .section-title::before,
-      .section-title::after {
-        content: "";
-        display: inline-block;
-        width: 180px;
-        height: 2px;
-        background-color: #ff7e25;
-        margin: 0 15px;
-        vertical-align: middle;
-        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.224);
-      }
-      
-      .menu-row {
+      .location-contact-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 60px;
-        margin-bottom: 110px;
+        gap: 80px;
       }
       
-      .menu-card {
-        width: 200px;
-        background: #fff;
-        border-radius: 20px;
-        box-shadow: 0 5px 16px rgba(0, 0, 0, 0.139);
-        padding: 15px 20px;
+      .location-card, .contact-card {
+        background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
+        color: black;
+        padding: 30px;
+        border-radius: 25px;
+        height: 540px;
+        width: 400px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.443);
         text-align: center;
-        transition: all 0.3s ease-in-out;
       }
       
-      .menu-card:hover {
-        transform: translateY(-5px);
+      .location-card h2,
+      .contact-card h2 {
+        /* letter-spacing: 1px; */
+        text-decoration: underline;
+        font-size: 45px;
+        font-family: 'Sedgwick Ave', cursive;
+        margin-bottom: 110px;
+        text-align: center;
+        text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.165);
+        font-weight: normal
       }
       
-      .menu-card img {
-        width: 100%;
-        border-radius: 15px;
-        /* border: 2px solid #ff7e25; */
+      .location-card p,
+      .contact-card p {
+        margin-left: 0vw;
+        font-size: 20px;
+        line-height: 1.8;
+        font-weight: 400;
+        text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.122);
       }
-      
-      .item-name {
-        margin: 10px 0 5px;
-        font-weight: 500;
-        font-size: 16px;
+      .contact-card a {
+        text-decoration: none;
+        color: black;
       }
-      
-      .item-price {
-        font-size: 15px;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-      
-      .add-btn {
-        background: #333;
-        color: #fff;
-        padding: 6px 18px;
-        border: none;
-        border-radius: 12px;
-        font-size: 14px;
+
+      .location-card:hover {
+        color: #000000;
+        text-decoration: underline;
         cursor: pointer;
-        transition: background 0.3s ease;
       }
-      
-      .add-btn:hover {
-        background: #ff7e25;
+      .contact-card p:hover {
+        color: #000000;
+        text-decoration: underline;
+        cursor: pointer;
       }
+
+      .icon {
+        margin-right: 10px;
+      }
+
       
