--- a/sandwich-geeks-react/src/styles/menu.css
+++ b/sandwich-geeks-react/src/styles/menu.css
@@ -6,8 +6,8 @@ body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
     font-family: niramit;
     overflow-x: hidden;
-
 }
+
 .container {
     height: 4rem; 
     width: 100%;
@@ -28,7 +28,7 @@ body {
     backdrop-filter: blur(1rem);
     width: 100%;
     height: 10vh;
-    z-index: 1;
+    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,145 +87,7 @@ a:visited {
     color: black;
 }
 
-
-
-.signin-div {
-    margin-top: -10vh;
-}
-
-.signin-heading {
-    display: inline-block;
-    color: black;
-    font-family: "Sedgwick Ave";
-    font-size: 80px;
-    font-weight: normal;
-    text-align: center;
-    line-height: 30vh;
-    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
-}
-
-.rule1 {
-    height: 2px;
-    width: 27%;
-    border: none;
-    background-color: #ff7023;
-    display: inline-block;
-    margin-left: 23vh;
-    margin-bottom: 3.5vh;
-    margin-right: 5vh;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-}
-
-.rule2 {
-    height: 2px;
-    width: 27%;
-    border: none;
-    background-color: #ff7023;
-    display: inline-block;
-    margin-bottom: 3.5vh;
-    margin-left: 5vh;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
-}
-
-
-.signin-card {
-    width: 90%;
-    max-width: 500px;
-    margin: 0 auto;
-    margin-top: -10vh;
-    padding: 30px;
-    background: linear-gradient(280deg, #ff6817, #ff7c1e, #fe6b1b);
-    border-radius: 20px;
-    backdrop-filter: blur(15px);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-    color: #000;
-    z-index: 10;
-  }
-  .signin-card:hover {
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.371);
-  }
-  
-  .signin-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .signin-form label {
-    font-weight: 500;
-    text-align: left;
-    margin-left: 1vw;
-    color: #000;
-  }
-  
-  .signin-form input {
-    padding: 12px 20px;
-    border-radius: 30px;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    height: 36px;
-    width: 450px;
-    margin-right: 10px;
-    outline: none;
-    font-size: 16px;
-    font-family: 'Niramit';
-    background: rgba(255, 255, 255, 0.141);
-    /* background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px); */
-    color: rgb(0, 0, 0);
-    transition: all 0.3s ease-in-out;
-    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.16);
-  }
-
-  .signin-form input::placeholder {
-    color: rgba(0, 0, 0, 0.39);
-    opacity: 1;
-  }
-  .signin-form input:focus {
-    background: rgba(255, 255, 255, 0.271);
-  }
-  .signin-form input:hover {
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.169);
-    color: #000;
-    transform: scale(1.02);
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .signin-form button {
-    border-radius: 30px;
-    /* margin-bottom: 5vh; */
-    padding: 12px 20px;
-    height: 64px;
-    letter-spacing: 1.1px;
-    margin-left: 0vw;
-    margin-top: 2vh;
-    width: 500px;
-    border: 1px solid black;
-    background: #000000;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    font-size: 24px;
-    cursor: pointer;
-    font-family: 'Sedgwick Ave';
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.264);
-  }
-  
-  .signin-form button:hover {
-    scale: 1.03;
-    background: #000000;
-    color: #ff7023;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-  }
-  .signin-prompt {
-    margin-top: 2vh;
-    font-size: large;
-    text-align: center;
-    margin-bottom: -2vh;
-  }
-
-
-
-  .newsletter-footer {
+.newsletter-footer {
     background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
     /* background: #ff6d1e; */
     max-width: 100%;
@@ -234,6 +96,7 @@ a:visited {
     padding-bottom: 100px;
     border-radius: 20px;
     font-family: 'Segoe UI', sans-serif;
+    margin: 0 8px 0 8px;
     margin-top: 15vh;
     box-shadow: 0 -8px 16px rgba(0, 0, 0, 0.301);
   }
@@ -249,7 +112,7 @@ a:visited {
     letter-spacing: 1px;
     font-size: 60px;
     font-weight: normal;
-    margin-bottom: 3vh;
+    margin-bottom: 14.5vh;
     color: rgb(0, 0, 0);
     text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.323);
   
@@ -259,7 +122,7 @@ a:visited {
     font-size: 16px;
     opacity: 0.7;
     color: rgb(0, 0, 0);
-    margin-bottom: 5vh;
+    margin-top: -2vh;
     margin-left: 0vw;
     line-height: 2.5vh;
     /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
@@ -496,7 +359,7 @@ a:visited {
       margin-top: -5vh;
       border-radius: 0 0 20px 20px;
     }
-  
+ 
     .p2 {
       text-align: center;
       margin-left: 0vw;
@@ -514,6 +377,134 @@ a:visited {
     }
     
 
-  
-  
-  
+
+    .menu-div {
+        margin-top: -10vh;
+        margin-left: 10vh;
+    }
+    
+    .menu-heading {
+        display: inline-block;
+        color: black;
+        font-family: "Sedgwick Ave";
+        font-size: 80px;
+        font-weight: normal;
+        text-align: center;
+        line-height: 30vh;
+        text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
+    }
+    
+    .rule1 {
+        height: 2px;
+        width: 27%;
+        border: none;
+        background-color: #ff7023;
+        display: inline-block;
+        margin-left: 14vw;
+        margin-bottom: 3.5vh;
+        margin-right: 5vh;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+    }
+    
+    .rule2 {
+        height: 2px;
+        width: 27%;
+        border: none;
+        background-color: #ff7023;
+        display: inline-block;
+        margin-bottom: 3.5vh;
+        margin-left: 5vh;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+    }
+
+
+
+    .menu-section2 {
+        padding: 50px 20px;
+        margin-top: -20vh;
+        text-align: center;
+        font-family: 'Niramit', sans-serif;
+      }
+      
+      .section-title {
+        font-size: 38px;
+        font-weight: normal;
+        text-transform: uppercase;
+        position: relative;
+        margin: 50px 0 20px;
+        color: #000;
+        font-family: 'Sedgwick Ave';
+        word-spacing: 9px;
+        text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.205);
+        /* letter-spacing: 1px; */
+      }
+      
+      .section-title::before,
+      .section-title::after {
+        content: "";
+        display: inline-block;
+        width: 180px;
+        height: 2px;
+        background-color: #ff7e25;
+        margin: 0 15px;
+        vertical-align: middle;
+        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.224);
+      }
+      
+      .menu-row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 60px;
+        margin-bottom: 110px;
+      }
+      
+      .menu-card {
+        width: 200px;
+        height: 300px;
+        background: #fff;
+        border-radius: 20px;
+        box-shadow: 0 5px 16px rgba(0, 0, 0, 0.139);
+        padding: 15px 20px;
+        text-align: center;
+        transition: all 0.3s ease-in-out;
+      }
+      
+      .menu-card:hover {
+        transform: translateY(-5px);
+      }
+      
+      .menu-card img {
+        width: 100%;
+        border-radius: 15px;
+        /* border: 2px solid #ff7e25; */
+      }
+      
+      .item-name {
+        margin: 10px 0 5px 0;
+        font-weight: 500;
+        font-size: 16px;
+      }
+      
+
+      .price{
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
+      .add-btn {
+        background: #333;
+        color: #fff;
+        padding: 6px 18px;
+        border: none;
+        border-radius: 12px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+        margin-bottom: 10vh;
+      }
+      
+      .add-btn:hover {
+        background: #ff7e25;
+      }
+      
