--- a/sandwich-geeks-react/src/styles/signin.css
+++ b/sandwich-geeks-react/src/styles/signin.css
@@ -87,7 +87,147 @@ a:visited {
     color: black;
 }
 
-.newsletter-footer {
+
+
+.signin-div {
+    margin-top: -10vh;
+}
+
+.signin-heading {
+    display: inline-block;
+    color: black;
+    font-family: "Sedgwick Ave";
+    font-size: 80px;
+    font-weight: normal;
+    text-align: center;
+    line-height: 30vh;
+    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
+}
+
+.rule1 {
+    height: 2px;
+    width: 27%;
+    border: none;
+    background-color: #ff7023;
+    display: inline-block;
+    margin-left: 23vh;
+    margin-bottom: 3.5vh;
+    margin-right: 5vh;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+}
+
+.rule2 {
+    height: 2px;
+    width: 27%;
+    border: none;
+    background-color: #ff7023;
+    display: inline-block;
+    margin-bottom: 3.5vh;
+    margin-left: 5vh;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
+}
+
+
+.signin-card {
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: -10vh;
+    padding: 30px;
+    background: linear-gradient(280deg, #ff6817, #ff7c1e, #fe6b1b);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+    color: #000;
+    z-index: 10;
+
+  }
+  .signin-card:hover {
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.371);
+  }
+  
+  .signin-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  .signin-form label {
+    font-weight: 500;
+    text-align: left;
+    margin-left: 1vw;
+    color: #000;
+  }
+  
+  .signin-form input {
+    padding: 12px 20px;
+    border-radius: 30px;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    height: 36px;
+    width: 450px;
+    margin-right: 10px;
+    outline: none;
+    font-size: 16px;
+    font-family: 'Niramit';
+    background: rgba(255, 255, 255, 0.141);
+    /* background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px); */
+    color: rgb(0, 0, 0);
+    transition: all 0.3s ease-in-out;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.16);
+  }
+
+  .signin-form input::placeholder {
+    color: rgba(0, 0, 0, 0.39);
+    opacity: 1;
+  }
+  .signin-form input:focus {
+    background: rgba(255, 255, 255, 0.271);
+  }
+  .signin-form input:hover {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.169);
+    color: #000;
+    transform: scale(1.02);
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .signin-form button {
+    border-radius: 30px;
+    /* margin-bottom: 5vh; */
+    padding: 12px 20px;
+    height: 64px;
+    letter-spacing: 1.1px;
+    margin-left: 0vw;
+    margin-top: 2vh;
+    width: 500px;
+    border: 1px solid black;
+    background: #000000;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 24px;
+    cursor: pointer;
+    font-family: 'Sedgwick Ave';
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.264);
+  }
+  
+  .signin-form button:hover {
+    scale: 1.03;
+    background: #000000;
+    color: #ff7023;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  }
+  .signin-prompt {
+    margin-top: 2vh;
+    font-size: larger;
+    text-align: center;
+    margin-bottom: -2vh;
+    margin-left: -34vw;
+  }
+
+
+
+  .newsletter-footer {
     background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
     /* background: #ff6d1e; */
     max-width: 100%;
@@ -121,7 +261,7 @@ a:visited {
     font-size: 16px;
     opacity: 0.7;
     color: rgb(0, 0, 0);
-    margin-bottom: 5vh;
+    margin-top: -2vh;
     margin-left: 0vw;
     line-height: 2.5vh;
     /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
@@ -376,76 +516,6 @@ a:visited {
     }
     
 
-
-
-    .location-contact-divider {
-        /* color: black;
-        border-color: black; */
-        margin-top: 4vh;
-        height: 65vh;
-        background-color: black;
-    }
-    .location-contact-section {
-        margin-top: 9vh;
-        font-family: 'Niramit', sans-serif;
-        margin-bottom: -2vh;
-      }
-      
-      .location-contact-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 80px;
-      }
-      
-      .location-card, .contact-card {
-        background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
-        color: black;
-        padding: 30px;
-        border-radius: 25px;
-        height: 540px;
-        width: 400px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.443);
-        text-align: center;
-      }
-      
-      .location-card h2,
-      .contact-card h2 {
-        /* letter-spacing: 1px; */
-        text-decoration: underline;
-        font-size: 45px;
-        font-family: 'Sedgwick Ave', cursive;
-        margin-bottom: 110px;
-        text-align: center;
-        text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.165);
-        font-weight: normal
-      }
-      
-      .location-card p,
-      .contact-card p {
-        font-size: 20px;
-        line-height: 1.8;
-        font-weight: 400;
-        text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.122);
-      }
-      .contact-card a {
-        text-decoration: none;
-        color: black;
-      }
-
-      .location-card:hover {
-        color: #000000;
-        text-decoration: underline;
-        cursor: pointer;
-      }
-      .contact-card p:hover {
-        color: #000000;
-        text-decoration: underline;
-        cursor: pointer;
-      }
-
-      .icon {
-        margin-right: 10px;
-      }
-
-      
+  
+  
+  
