--- a/sandwich-geeks-react/src/styles/style.css
+++ b/sandwich-geeks-react/src/styles/style.css
@@ -1223,6 +1223,10 @@ hr {
     /* margin-left: -5vw; */
     margin-right: -1.2vw;
   }
+
+  .social-icons-grid li a {
+    color: black;
+  }
   
   .social-btn:hover {
     transform: scale(1.1);
